# serializer version: 1
# name: test_export_of_profile[csv]
  '''
  ───────────────────────────── Start pytask session ─────────────────────────────
  Platform: <platform> -- Python <version>, pytask <version>, pluggy <version>
  Root: <path>
  Collected 1 task.
  
  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━┓
  ┃ Task                          ┃ Duration (in s) ┃
  ┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━┩
  │ task_example.py::task_example │             2.0 │
  └───────────────────────────────┴─────────────────┘
  ────────────────────────────────────────────────────────────────────────────────
  '''
# ---
# name: test_export_of_profile[json]
  '''
  ───────────────────────────── Start pytask session ─────────────────────────────
  Platform: <platform> -- Python <version>, pytask <version>, pluggy <version>
  Root: <path>
  Collected 1 task.
  
  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━┓
  ┃ Task                          ┃ Duration (in s) ┃
  ┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━┩
  │ task_example.py::task_example │             2.0 │
  └───────────────────────────────┴─────────────────┘
  ────────────────────────────────────────────────────────────────────────────────
  '''
# ---
# name: test_profile_if_there_is_information_on_collected_tasks
  '''
  ───────────────────────────── Start pytask session ─────────────────────────────
  Platform: <platform> -- Python <version>, pytask <version>, pluggy <version>
  Root: <path>
  Collected 1 task.
  
  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━┓
  ┃ Task                          ┃ Duration (in s) ┃ Size of Products ┃
  ┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━┩
  │ task_example.py::task_example │             2.0 │         43 bytes │
  └───────────────────────────────┴─────────────────┴──────────────────┘
  ────────────────────────────────────────────────────────────────────────────────
  '''
# ---
